Fixed background moving when horizontal scrollbar appears and disappears

--- a/src/styles.css
+++ b/src/styles.css
@@ -65,8 +65,8 @@ body::before {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vw;
     background-image: url('../public/bg-still1.jpg');
     background-size: cover;
     /* Ensures the image covers the entire viewport */
